flapivor/tests/m3/hopix/typechecker/good/51-ref.hopix
val x : Ref<Int> = ref (0)