flapivor/tests/m3/hopix/typechecker/bad/62-sequence.hopix
val x : Ref<Int> = ref 0

val y : Int =
    "Right here";
    "Not what I expected here."